[gd_scene load_steps=5 format=3 uid="uid://bfcourr7a7hr4"]

[ext_resource type="Theme" uid="uid://c33bn7on3i3f7" path="res://assets/theme.tres" id="1_syvep"]
[ext_resource type="Script" uid="uid://bfm134htiqls" path="res://scripts/user_interface.gd" id="2_l2bgj"]
[ext_resource type="PackedScene" uid="uid://pmni8bpevc3b" path="res://scenes/settings.tscn" id="3_y1h3b"]

[sub_resource type="LabelSettings" id="LabelSettings_syvep"]
font_size = 20

[node name="User Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_syvep")
script = ExtResource("2_l2bgj")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tooltip" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.456
anchor_top = 0.937
anchor_right = 0.541
anchor_bottom = 0.969
offset_left = 0.319946
offset_top = 0.383972
offset_right = -0.47998
offset_bottom = -1.19202
grow_horizontal = 2
grow_vertical = 0
text = "TOOLTIP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flashlight_label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.456
anchor_top = 0.937
anchor_right = 0.541
anchor_bottom = 0.969
offset_left = 568.32
offset_top = -47.616
offset_right = 563.52
offset_bottom = -48.192
grow_horizontal = 2
grow_vertical = 0
text = "Flashlight On"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -80.0
offset_right = 56.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_syvep")
theme_override_font_sizes/font_size = 18

[node name="Information" type="Panel" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -64.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0

[node name="Ammo" type="Label" parent="CanvasLayer/Information"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 40.0
text = "32 / 32"
label_settings = SubResource("LabelSettings_syvep")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPS" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 24.0
offset_right = 292.0
offset_bottom = 47.0
bbcode_enabled = true
text = "Fps: 1440 / 1440 / 1440"

[node name="Pause Menu" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -192.0
offset_right = 104.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_syvep")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Pause Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Pause Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/Pause Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="CanvasLayer/Pause Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Settings"

[node name="Exit_MainMenu" type="Button" parent="CanvasLayer/Pause Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Exit to Main Menu"

[node name="Exit_Desktop" type="Button" parent="CanvasLayer/Pause Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Exit to Desktop"

[node name="Settings Menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 64.0
offset_bottom = 64.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Settings Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.0
offset_top = -200.0
offset_right = 1556.0
offset_bottom = 880.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="Settings" parent="CanvasLayer/Settings Menu" instance=ExtResource("3_y1h3b")]
layout_mode = 1
offset_left = 596.0
offset_top = 340.0
offset_right = 596.0
offset_bottom = 340.0

[connection signal="pressed" from="CanvasLayer/Pause Menu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/VBoxContainer/Exit_MainMenu" to="." method="_on_exit_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/VBoxContainer/Exit_Desktop" to="." method="_on_exit_desktop_pressed"]
